# cp-editor

./: .gitignore  CLAUDE.md  Cargo.toml  MVP_CHECKLIST.md  README.md  TODOLIST.md
.github/workflows/: ci.yml  release.yml
editor_core/: Cargo.toml
editor_core/src/: buffer.rs  cursor.rs  editor.rs  fold.rs  history.rs  lib.rs  lsp_types.rs  perf.rs  search.rs  workspace.rs
editor_core/src/syntax/: highlighter.rs  language.rs  mod.rs  theme.rs
editor_desktop/: Cargo.toml
editor_desktop/src/: main.rs
editor_lsp/: Cargo.toml
editor_lsp/src/: client.rs  lib.rs  messages.rs  transport.rs  types.rs
editor_ui/: Cargo.toml
editor_ui/src/: app.rs  font.rs  gpu_renderer.rs  input.rs  lib.rs  lsp.rs  notifications.rs  renderer.rs
editor_ui/src/shaders/: blit.wgsl  rect.wgsl  text.wgsl
scripts/: build-release.ps1  build-release.sh
