[package]
name = "cp-editor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CP Editor - Core text editing engine"

[dependencies]
ropey.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-json.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
