[package]
name = "cp-editor-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CP Editor - Language Server Protocol client"

[dependencies]
# LSP protocol types
lsp-types = "0.97"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log.workspace = true

# Channels for cross-thread communication
crossbeam-channel = "0.5"
